# noisedeck

./: .gitignore  CLAUDE.md  Cargo.toml  README.md
.github/workflows/: tests.yml
sample-audio/: forest-ambience-296528.license.txt
src/: daemon.rs  import.rs  main.rs  util.rs
src/daemon/: audio.rs  ui.rs
src/daemon/ui/: btn.rs  iface.rs
src/daemon/ui/tests/: harness.rs
src/import/: elgato.rs
